@@ -1,4 +1,5 @@
 1.0.4
+Added --filpath option to use image as background rather than root window.
 Added help option.
 Added cli prefs overides.
 Added prefs file.
